--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2018"
 
 [lib]
 name = "kvs"
-path = "src/lib.rs"
+path = "src/kvs/lib.rs"
 
 [dependencies]
 # workaround see https://github.com/rust-lang/rls/issues/1454
