--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,10 @@ path = "src/kvs/lib.rs"
 bitflags = "=1.0.4"
 clap = "2.33.0"
 
+[dev-dependencies]
+assert_cmd = "0.11.0"
+predicates = "1.0.0"
+
 [[test]]
-name = "integration"
+name = "unit"
 path = "tests/tests.rs"
