--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,13 @@ path = "src/kvs/lib.rs"
 # workaround see https://github.com/rust-lang/rls/issues/1454
 bitflags = "=1.0.4"
 clap = "2.33.0"
+# TODO: remove failure as soon as obvious error types emerge
+failure = "0.1.5"
+serde = { version = "1.0.89", features = ["derive"] }
+serde_json = "1.0.39"
 
 [dev-dependencies]
 assert_cmd = "0.11.0"
 predicates = "1.0.0"
+tempfile = "3.0.7"
+walkdir = "2.2.7"
